@@ -454,15 +454,6 @@
 
 			<tr>
 				<td>
-					<input type="checkbox" id="showgroupevents">
-				</td>
-				<td height=30>
-					<div id="group_events_text" class="text">Show Events on Group Overview</div>
-				</td>
-			</tr>
-
-			<tr>
-				<td>
 					<input type="checkbox" id="showgreenlightbanner">
 				</td>
 				<td height=30>
